--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=API_LARAVEL
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://localhost
 
-APP_LOCALE=id
-APP_FALLBACK_LOCALE=id
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=id_ID
 
 JWT_SECRET=
-JWT_TTL=
+JWT_TTL=720
 
 # CUSTOM VARIABLES - config/app.php
 CLIENT_TOKEN=
@@ -30,7 +31,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=api.gemushuu
+DB_DATABASE=db_name
 DB_USERNAME=root
 DB_PASSWORD=
 
